welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:23: error: expected class or object definition
à 
^MethodsPicture:25: error: Unmatched closing brace '}' ignored here
}
^